[gd_scene load_steps=14 format=3 uid="uid://dgq2cvvd8rd17"]

[ext_resource type="Script" uid="uid://cib1gkgns78mu" path="res://vehicles/vehicle.gd" id="1_otyau"]
[ext_resource type="ArrayMesh" uid="uid://bqrwin8ccgptt" path="res://vehicles/meshes/wheel.res" id="2_odvmm"]
[ext_resource type="ArrayMesh" uid="uid://ctglc27jx8xe2" path="res://vehicles/meshes/truck_cab.res" id="3_l3goo"]
[ext_resource type="AudioStream" uid="uid://cb7wvsd6vygd3" path="res://vehicles/engine.wav" id="4_h4txb"]
[ext_resource type="AudioStream" uid="uid://sy2li7u35867" path="res://vehicles/impact_1.wav" id="5_qhc51"]
[ext_resource type="AudioStream" uid="uid://bf0h7s81yr8nj" path="res://vehicles/impact_2.wav" id="6_nf6uw"]
[ext_resource type="AudioStream" uid="uid://sun2n8a4xapl" path="res://vehicles/impact_3.wav" id="7_2q7bh"]
[ext_resource type="AudioStream" uid="uid://dpbayeeufya21" path="res://vehicles/impact_4.wav" id="8_uxyaj"]
[ext_resource type="Texture2D" uid="uid://bju75l2w3r7vq" path="res://vehicles/blob_shadow.png" id="10_trane"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hks6n"]
size = Vector3(1, 0.7642822, 1.6391602)

[sub_resource type="BoxShape3D" id="BoxShape3D_f3bst"]
size = Vector3(1.3392, 0.24589264, 2.4581509)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_giq8b"]
random_pitch = 1.05
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("5_qhc51")
stream_1/stream = ExtResource("6_nf6uw")
stream_2/stream = ExtResource("7_2q7bh")
stream_3/stream = ExtResource("8_uxyaj")

[sub_resource type="BoxShape3D" id="BoxShape3D_4ui1n"]
size = Vector3(1, 0.54397583, 0.6763916)

[node name="Body" type="VehicleBody3D" node_paths=PackedStringArray("area_acople") groups=["Persistente", "save_transform", "vehicles"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.017255, 0.9904547, 7.4537864)
center_of_mass_mode = 1
script = ExtResource("1_otyau")
area_acople = NodePath("ZonaAcople")

[node name="Wheel1" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.000773743, 1.10416)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.23
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
damping_compression = 0.88

[node name="Wheel1" type="MeshInstance3D" parent="Wheel1"]
layers = 2
gi_mode = 2
mesh = ExtResource("2_odvmm")

[node name="Wheel2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.000773743, -0.783403)
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.23
wheel_friction_slip = 1.0
suspension_stiffness = 28.0
damping_compression = 0.88

[node name="Wheel2" type="MeshInstance3D" parent="Wheel2"]
layers = 2
gi_mode = 2
mesh = ExtResource("2_odvmm")

[node name="Wheel3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.000773743, 1.10416)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.23
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
damping_compression = 0.88

[node name="Wheel3" type="MeshInstance3D" parent="Wheel3"]
layers = 2
gi_mode = 2
mesh = ExtResource("2_odvmm")

[node name="Wheel4" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.000773743, -0.783403)
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.23
wheel_friction_slip = 1.0
suspension_stiffness = 28.0
damping_compression = 0.88

[node name="Wheel4" type="MeshInstance3D" parent="Wheel4"]
layers = 2
gi_mode = 2
mesh = ExtResource("2_odvmm")

[node name="Body" type="MeshInstance3D" parent="."]
layers = 2
gi_mode = 2
mesh = ExtResource("3_l3goo")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6962001, 0.5050806)
shape = SubResource("BoxShape3D_hks6n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17321034, 0.10052252)
shape = SubResource("BoxShape3D_f3bst")

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, -0.222867, 0.0955184)
stream = ExtResource("4_h4txb")
pitch_scale = 0.05
autoplay = true
attenuation_filter_cutoff_hz = 20500.0

[node name="ImpactSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, -0.222867, 0.0955184)
stream = SubResource("AudioStreamRandomizer_giq8b")
volume_db = -9.0
max_polyphony = 3
attenuation_filter_cutoff_hz = 20500.0

[node name="BlobShadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, -0.222867, 0.145518)
size = Vector3(1.6, 4, 3)
texture_albedo = ExtResource("10_trane")
upper_fade = 2.0
lower_fade = 1.0
cull_mask = 1048573

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="InteriorCameraPosition" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.9, 0.3)

[node name="PinJoint3D" type="ConeTwistJoint3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.00169557, 0.29210663, -0.86459357)
swing_span = 30.0
softness = 0.5

[node name="ZonaAcople" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, -0.222867, 0.0955184)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZonaAcople"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6279485, -0.9417372)
shape = SubResource("BoxShape3D_4ui1n")

[node name="PuntoAcopleCamion" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.33363885, -1.0391054)

[node name="MountPoint_Player" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0799093, 0)

[node name="ExitPoint_Player" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0767505, -0.056773186)

[connection signal="body_entered" from="ZonaAcople" to="." method="_on_zona_acople_body_entered"]
[connection signal="body_exited" from="ZonaAcople" to="." method="_on_zona_acople_body_exited"]
